Minor tweaks, clarifications, updates, links

--- a/CiscoDevNetCreate2019/Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb
@@ -28,7 +28,9 @@
     "    suite\n",
     "else:\n",
     "    suite\n",
-    "```"
+    "```\n",
+    "\n",
+    "More on logic statements can be found in the [Decision Making](Python_Basics_05_-_Decision_Making.ipynb) section"
    ]
   },
   {
@@ -66,9 +68,107 @@
     "\n",
     "Typically python code ends a new line with a new line character. But it does provide the ability for [Multi-Line Statements](http://www.tutorialspoint.com/python3/python_basic_syntax.htm).\n",
     "\n",
-    "1. Using `\\` will allow a really long line (over 80 characters) to be split into multiple lines.\n",
+    "1. Using `\\` will allow a really long line (over 80 characters) to be split into multiple lines of your code (but when you print will show as a single line).\n",
     "\n",
-    "2. Statements contained in `[]`, `{}`, or `()`"
+    "\n",
+    "2. Statements contained in `[]`, `{}`, or `()`\n",
+    "\n",
+    "\n",
+    "3. Using triple quotes:\n",
+    "    - `\"\"\"some text here\"\"\"`\n",
+    "    - `'''some text here'''`\n",
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "<b>Try this!</b>\n",
+    "\n",
+    "```python\n",
+    "# example of long lines\n",
+    "temp_str = \"This is a really long string of characters \" \\\n",
+    "            \"using the single use quotes (\\\" or \\').\" \\\n",
+    "            \" 80 characters is not a hard limit, but does ensure \" \\\n",
+    "            \"your code is pythonic.\"\n",
+    "print(temp_str)\n",
+    "```\n",
+    "    \n",
+    "```python\n",
+    "# example of enclosure of statements\n",
+    "temp_str = [\"This is a really long string of characters \"\n",
+    "            \"using the single use quotes (\\\" or \\').\"\n",
+    "            \" 80 characters is not a hard limit, but does ensure \"\n",
+    "            \"your code is pythonic.\"]\n",
+    "print(temp_str)\n",
+    "```\n",
+    "    \n",
+    "\n",
+    "```python\n",
+    "# example of triple quotes\n",
+    "temp_str = \"\"\"This is a really long string of characters \n",
+    "            using the single use quotes (\\\" or \\').\n",
+    "             80 characters is not a hard limit, but does ensure \n",
+    "            your code is pythonic.\"\"\"\n",
+    "print(temp_str)\n",
+    "```\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example of long lines\n",
+    "temp_str = \"This is a really long string of characters \" \\\n",
+    "            \"using the single use quotes (\\\" or \\').\" \\\n",
+    "            \" 80 characters is not a hard limit, but does ensure \" \\\n",
+    "            \"your code is pythonic.\"\n",
+    "print(temp_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example of enclosure of statements\n",
+    "temp_str = {\"This is a really long string of characters \"\n",
+    "            \"using the single use quotes (\\\" or \\').\"\n",
+    "            \" 80 characters is not a hard limit, but does ensure \"\n",
+    "            \"your code is pythonic.\"}\n",
+    "print(temp_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "Notice anything strange about the above?\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example of triple quotes\n",
+    "temp_str = \"\"\"This is a really long string of characters \n",
+    "            using the single use quotes (\\\" or \\').\n",
+    "             80 characters is not a hard limit, but does ensure \n",
+    "            your code is pythonic.\"\"\"\n",
+    "print(temp_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "What's different about the above?\n",
+    "</div>"
    ]
   },
   {
@@ -83,7 +183,11 @@
     "- `'''something here'''`\n",
     "- `\"\"\"something here\"\"\"`\n",
     "\n",
-    "In order to comment - this is **not** the case. This is only used to create documentation (or [docstrings](https://www.python.org/dev/peps/pep-0257)). This creates a **string object** so therefore it _does not_ create a comment."
+    "In order to comment - this is **not** the case. This is only used to create documentation (or [docstrings](https://www.python.org/dev/peps/pep-0257)). This creates a **string object** so therefore it _does not_ create a comment.\n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "Think about what the above code looks like versus the other multi-string options. How does that fit in with this documentation vs comments?\n",
+    "</div>"
    ]
   },
   {
@@ -111,7 +215,10 @@
     "\n",
     "When you are able to successfully do this, you know you have properly installed everything you need for the time being.\n",
     "\n",
-    "And how do you confirm this in Python?\n",
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Pop quiz!</b>\n",
+    "<br>How do you confirm proper installation in Python?\n",
+    "</div>\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
@@ -127,7 +234,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Hello World!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,7 +262,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Line 1')\n",
+    "print()    # prints \"\\n\" (newline)\n",
+    "print('Line 3')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,7 +290,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(1, \"two\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,8 +302,9 @@
     "\n",
     "In **_python2_** the **print** function did not require parentheses.\n",
     "\n",
-    "_python2_:  `print \"This line will be printed\"`\n",
-    "_python3_:  `print(\"This line will be printed\")`\n",
+    "*python2*:  `print \"This line will be printed\"`\n",
+    "\n",
+    "*python3*:  `print(\"This line will be printed\")`\n",
     "\n",
     "By doing this, **python3** was able to move towards a better representation to show that print was a function - something that we will cover later on.\n",
     "\n",
@@ -217,14 +333,14 @@
     "\n",
     "## Easily Create New Tuples!\n",
     "\n",
-    "If you add a comma to multiple items on the right side, Python will convert the data to a tuple.\n",
+    "If you add a comma to multiple items on the right side, Python will convert the data to a [tuple](Python_Basics_10_-_Variable_Type_TUPLE.ipynb).\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
     "```python\n",
     "a = 1, 2    # this is an assignment statement\n",
-    "a           # this is just to show you what is in 'a'\n",
+    "a           # this is just to show you what is in 'a' & is NOT the same as printing\n",
     "```\n",
     "</div>"
    ]
@@ -234,7 +350,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 1, 2\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,7 +376,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = \"this\"\n",
+    "c = \"that\"\n",
+    "a = a, b, c\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,7 +406,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "variableName = \"This is of variable type string.\"\n",
+    "variableName"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,6 +423,8 @@
     "\n",
     "In this instance, \"variable\" refers to a memory location. And \"label\" refers to the name that references that location.\n",
     "\n",
+    "<div class=\"alert alert-warning\"><b>NOTE:</b>  the <code>is</code> keyword is used to test if two variables refer to the same memory location, while the comparison operator or <code>==</code> is used to compare if the two variables are equivalent. This is really important to understand, because this lack of knowledge can turn your program into a potential resource hog.</div>\n",
+    "\n",
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
@@ -305,7 +434,9 @@
     "print(b)\n",
     "print(c)\n",
     "print(a==b)\n",
-    "print(a is b)     # meaning this points to the same memory location\n",
+    "print(a is b)     # does this point to the same memory location? why?\n",
+    "```\n",
+    "```python\n",
     "d = 1\n",
     "print(a==d)\n",
     "print(a is d)    # does it point to the same memory location? why?\n",
@@ -318,70 +449,95 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = b = c = 1\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(a==b)\n",
+    "print(a is b) "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "d = 1\n",
+    "print(a==d)\n",
+    "print(a is d)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Assignment Statements\n",
+    "<div class=\"alert alert-warning\">\n",
+    "Does the above point to the same memory location?\n",
+    "</div>\n",
     "\n",
+    "You may also want to take a peak at [Identity Operators](Python_Basics_04_-_Operators.ipynb#Identity-Operators).\n",
+    "\n",
+    "<div class=\"alert alert-success\">\n",
+    "<b>Try this!</b>\n",
+    "\n",
+    "```python\n",
+    "a = \"one\"\n",
+    "d = \"two\"\n",
+    "print(a==d)\n",
+    "print(a is d)\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "x = [\"apple\", \"banana\", \"cherry\"]\n",
+    "y = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(x == y)\n",
+    "print(x is y)\n",
+    "```\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"one\"\n",
+    "d = \"two\"\n",
+    "print(a==d)\n",
+    "print(a is d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [\"apple\", \"banana\", \"cherry\"]\n",
+    "y = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(x == y)\n",
+    "print(\"x is y:  \", x is y)\n",
+    "\n",
+    "y = x\n",
+    "print(\"x is y:  \", x is y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Be sure you are aware of the differences shown here!\n",
+    "\n",
+    "Be mindful of how you label things and their [scope](Python_Basics_15_-_Scope_Of_Variables.ipynb). Not only could it be a resource hog, but you may change your data along the way accidentally."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Each Label Is Assigned To A Different Memory Location (Variable)\n",
     "\n",
     "Pretty straight forward but might look something like this ...\n",
@@ -394,8 +550,14 @@
     "print(a)\n",
     "print(b)\n",
     "print(c)\n",
-    "a, b = 1, 2, \"John\"\n",
-    "a, b** = 1, 2, \"John\"\n",
+    "```\n",
+    "```python\n",
+    "*a, b = 1, 2, \"John\"\n",
+    "print(\"a:  \", a, \"\\nb:  \", b)\n",
+    "```\n",
+    "```python\n",
+    "a, *b = 1, 2, \"John\"\n",
+    "print(\"a:  {}\\nb:  {}\".format(a, b))\n",
     "```\n",
     "</div>\n",
     "\n",
@@ -405,53 +567,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "You can find more on string formatting [here](Python_Basics_08_-_Variable_Type_STRING.ipynb#String-Formatting)."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a, b, c = 1, 2, \"John\"\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "*a, b = 1, 2, \"John\"\n",
+    "print(\"a:  \", a, \"\\nb:  \", b)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "a, *b = 1, 2, \"John\"\n",
+    "print(\"a:  {}\\nb:  {}\".format(a, b))"
+   ]
   }
  ],
  "metadata": {
@@ -470,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
