--- a/CiscoDevNetCreate2019/Python_Basics_04_-_Operators.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_04_-_Operators.ipynb
@@ -52,13 +52,22 @@
     "[Conditional operators](http://www.learnpython.org/en/Conditions) (or comparison operators) are evaluated expressions that render **boolean** (true or false) values.\n",
     "\n",
     "For example ...\n",
-    "`=` is an assignment operator, while `==` or `!=` are comparison operators.\n",
-    "\n",
+    "`=` is an assignment operator, while `==` or `!=` are comparison operators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Comparison (Relational) Operators\n",
     "\n",
-    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-comparison.png?raw=true'></img>\n",
-    "\n",
-    "\n",
+    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-comparison.png?raw=true'></img>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Assignment Operators\n",
     "\n",
     "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-assignment.png?raw=true'></img>"
@@ -72,10 +81,20 @@
     "\n",
     "These operators work on the bits (1s and 0s) by performing bit by bit operations.\n",
     "\n",
-    "**bin()** is a built-in function to obtain binary representation of a number!\n",
-    "\n",
-    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-bitwise.png?raw=true'></img>\n",
-    "\n",
+    "**bin()** is a built-in function to obtain binary representation of a number!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-bitwise.png?raw=true'></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
@@ -98,10 +117,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b111100\n",
+      "0b1101\n",
+      "0b1100\n",
+      "0b111101\n",
+      "0b110001\n",
+      "-0b111101\n",
+      "0b111100\n",
+      "0b1111000000\n",
+      "0b1101\n",
+      "0b110\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp1 = 60    # 00111100\n",
+    "print(bin(temp1))\n",
+    "temp2 = 13    # 00001101\n",
+    "print(bin(temp2))\n",
+    "print(bin(temp1&temp2))\n",
+    "print(bin(temp1|temp2))\n",
+    "print(bin(temp1^temp2))\n",
+    "print(bin(~temp1))\n",
+    "print(bin(temp1))\n",
+    "print(bin(temp1<<4))\n",
+    "print(bin(temp2))\n",
+    "print(bin(temp2>>1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,11 +164,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Try this!</b>\n",
+    "\n",
+    "```python\n",
+    "a = True\n",
+    "b = False\n",
+    "print(a and b)\n",
+    "print(a or b)\n",
+    "print(not(a and b))\n",
+    "```\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "b = False\n",
+    "print(a and b)\n",
+    "print(a or b)\n",
+    "print(not(a and b))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +217,20 @@
     "Python membership operators test if some element is a member of a sequence (such as a list, string, set, etc). There are only 2 ways to test for membership:\n",
     "\n",
     "- `x in y`\n",
-    "- `x not in y`\n",
-    "\n",
-    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-membership.png?raw=true'></img>\n",
-    "\n",
+    "- `x not in y`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-membership.png?raw=true'></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Try this!</b>\n",
     "\n",
@@ -154,10 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temp1 in temp_str:  True\n",
+      "temp2 in temp_str:  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp1 = 'ab'\n",
+    "temp2 = 'ce'\n",
+    "temp_str = 'abcde'\n",
+    "print('temp1 in temp_str:  {}'.format(temp1 in temp_str))\n",
+    "print('temp2 in temp_str:  {}'.format(temp2 in temp_str))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,17 +276,17 @@
     "\n",
     "The data might be the same, but is the **memory location**?\n",
     "\n",
-    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-identity.png?raw=true'></img>\n",
-    "\n",
-    "**NOTE:**  This should really only be used for comparing something to None and thus NEVER used to compare one data set to another. (That's what [comparison operators](#Comparison-(Relational)-Operators) are used for.)"
+    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-identity.png?raw=true'></img>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**NOTE:**  This should really only be used for comparing something to None and thus NEVER used to compare one data set to another. (That's what [comparison operators](#Comparison-(Relational)-Operators) are used for.)\n",
+    "\n",
+    "For additional examples, check out [Multiple Assignment Statements](Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb#Multiple-Assignment-Statements) section."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,13 +296,6 @@
     "\n",
     "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-operators-precedence.png?raw=true'></img>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -214,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
