--- a/CiscoDevNetCreate2019/Python_Basics_01_-_Introduction.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_01_-_Introduction.ipynb
@@ -46,13 +46,14 @@
     "## Possible Libraries\n",
     "\n",
     "There are way more than what is listed here, but wanted to just share a few:\n",
-    "- pandas\n",
-    "- NumPy\n",
-    "- Scipy\n",
-    "- IPython\n",
-    "- mathplotlib\n",
-    "- Bokeh\n",
-    "- tensorflow\n",
+    "- [pandas](https://pandas.pydata.org/)\n",
+    "- [NumPy](https://numpy.org/)\n",
+    "- [Scipy](https://www.scipy.org/)\n",
+    "- [IPython](https://ipython.org/) (a kernel for [Jupyter](https://jupyter.org/))\n",
+    "- [matplotlib](https://matplotlib.org/)\n",
+    "- [Bokeh](https://docs.bokeh.org/en/latest/index.html)\n",
+    "- [tensorflow](https://www.tensorflow.org/)\n",
+    "- [requests](https://requests.readthedocs.io/en/master/)\n",
     "\n",
     "\n",
     "## Additional Free Resources To Learn Python\n",
@@ -64,6 +65,7 @@
     "- __[TutorialsPoint](https://www.tutorialspoint.com/python/index.htm)__\n",
     "- __[SoloLearn.com](https://www.sololearn.com)__\n",
     "- __[LearnToCodeOnline.com](http://learntocodeonline.com)__: my free training site (at the moment points to my Facebook page)\n",
+    "- __[GitHub for ProsperousHeart](https://github.com/ProsperousHeart)__ (my personal GitHub)\n",
     "\n",
     "### Apps For Your Phone\n",
     "\n",
@@ -105,6 +107,8 @@
     "\n",
     "If this is the case and you're ready to exit, simply input: `exit()`\n",
     "\n",
+    "You can also try `python --version` to see what versionyou are running, however the above steps ensures it is working.\n",
+    "\n",
     "\n",
     "## Get & Install Python\n",
     "\n",
@@ -125,7 +129,7 @@
     "I also installed __[Anaconda](https://anaconda.org)__ as part of a training I was following ...\n",
     "You can also do conda (a smaller version of anaconda).\n",
     "\n",
-    "However unless I'm using a [virtual environment](https://github.com/ProsperousHeart/cheatsheets/blob/master/Tools/VirtualEnvironments.md)), I use the full anaconda.\n",
+    "However I generally prefer to use a [virtual environment](https://github.com/ProsperousHeart/cheatsheets/blob/master/Tools/VirtualEnvironments.md).\n",
     "\n",
     "### More On Virtual Environments\n",
     "\n",
@@ -160,13 +164,6 @@
     "\n",
     "Type `python FILENAME.py` to run your python program **FILENAME** from your command prompt."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -185,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
