--- a/CiscoDevNetCreate2019/Python_Basics_03_-_Variables___Garbage_Collection.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_03_-_Variables___Garbage_Collection.ipynb
@@ -13,14 +13,14 @@
    "source": [
     "# What Are Python Identifiers?\n",
     "\n",
-    "Python **identifiers** are sed to identify:\n",
+    "Python **identifiers** are used to identify:\n",
     "- a variable\n",
     "- a function\n",
     "- a class\n",
     "- a module\n",
     "- an object\n",
     "\n",
-    "Checkout [Variable Creation Tips](#Variable-Creation-Tips) on how they should be structure."
+    "Checkout [Variable Creation Tips](#Variable-Creation-Tips) on how they should be structured."
    ]
   },
   {
@@ -33,13 +33,13 @@
     "\n",
     "In programming, it refers to reserved memory locations to store values.\n",
     "\n",
-    "They are created by using assignment statements, as mentioned in *Python Basics 02*.\n",
+    "They are created by using assignment statements, as mentioned in [*Python Basics 02*](Python_Basics_02_-_Syntax_And_Basic_Statements.ipynb).\n",
     "\n",
     "As a recap...\n",
     "- Left side of the assignment variable `=` is generally considered the variable, but more closely resembles the label of the variable\n",
     "- Right side of the `=` is the data to store in a memory location\n",
     "\n",
-    "You as the propgrammer are who gives meaning to said variable.\n",
+    "You as the programmer are who gives meaning to said variable.\n",
     "\n",
     "## What Is A Variable Type?\n",
     "\n",
@@ -80,11 +80,16 @@
     "\n",
     "## Make It Mneumonic (Memorable)\n",
     "\n",
-    "This is helpful for you to keep things straight, as well as anyone coming after you to work on the program.\n",
-    "\n",
+    "This is helpful for you to keep things straight, as well as anyone coming after you to work on the program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Casing\n",
     "\n",
-    "Be sure that you ALWAYS start with a lower case letter. According to PEP8, upper case indicates you are referring to a Class.\n",
+    "Be sure that you ALWAYS start with a lower case letter. According to [PEP8](https://www.python.org/dev/peps/pep-0008/), upper case indicates you are referring to a Class.\n",
     "\n",
     "`NumApples` is OK if this is the name of a class.\n",
     "\n",
@@ -106,7 +111,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a!jkl = 6"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,14 +151,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "varOne = 1\n",
+    "print(varOne)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(varone)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,7 +173,7 @@
     "\n",
     "As mentioned earlier, variables are pieces of memory that store particular data.\n",
     "\n",
-    "While python has automatic garbage collection (meaning it deletes data it no longer needs) you will want to be aware that if you know FOR A FACT that something isn't needed after you pass it to a function? (*A function is a piece of code that does some kind of computation or action.*)\n",
+    "While python has automatic [garbage collection](https://docs.python.org/3/library/gc.html#module-gc) (meaning it deletes data it no longer needs) you will want to be aware that if you know FOR A FACT that something isn't needed after you pass it to a function? (*A function is a piece of code that does some kind of computation or action.*)\n",
     "\n",
     "Use `del` to remove the pre-created variable.\n",
     "\n",
@@ -184,14 +196,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del varOne"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "varOne"
+   ]
   }
  ],
  "metadata": {
@@ -210,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
