--- a/CiscoDevNetCreate2019/Python_Basics_05_-_Decision_Making.ipynb
+++ b/CiscoDevNetCreate2019/Python_Basics_05_-_Decision_Making.ipynb
@@ -43,16 +43,45 @@
     "# How Does Decision Making Affect Your Code?\n",
     "\n",
     "Python assumes the following:\n",
-    "- non-zero and non-null (not None) values as **True**\n",
-    "- zero or null (None) values as **False**\n",
+    "- non-zero and non-null (not `None`) values as **True**\n",
+    "- zero or null (`None`) values as **False**\n",
     "\n",
+    "<div class=\"alert alert-success\">\n",
+    "<b>Try this!</b>\n",
+    "\n",
+    "```python\n",
+    "temp = []\n",
+    "print(temp == True)\n",
+    "```\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = []\n",
+    "print(temp == True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "When using an **if statement** with only 1 line in the code suite, you **_can_** put it all on one line like this:\n",
     "\n",
     "```python\n",
     "var = 100\n",
     "if var == 100:  print('Value of expression is:  {}'.format(var))\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "However, it is highly suggested not to do that. Not just for conformity, but also to make it easy on your eyes when you're troubleshooting.\n",
     "\n",
     "```python\n",
@@ -73,8 +102,13 @@
     "There are three major parts to an **if** statement block:\n",
     "1. The [if statement](http://www.tutorialspoint.com/python3/python_if_statement.htm)\n",
     "2. Optional [else statement](http://www.tutorialspoint.com/python3/python_if_else.htm)\n",
-    "3. Optional [nested if statements](http://www.tutorialspoint.com/python3/nested_if_statements_in_python.htm)\n",
-    "\n",
+    "3. Optional [nested if statements](http://www.tutorialspoint.com/python3/nested_if_statements_in_python.htm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-decisions-ifstmts.png?raw=true'></img>"
    ]
   },
@@ -90,8 +124,13 @@
     "\n",
     "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-decisions-loopconditions.png?raw=true'></img>\n",
     "\n",
-    "**CAUTION:**  be sure to put in loop controls to avoid infinite loops!\n",
-    "\n",
+    "**CAUTION:**  be sure to put in loop controls to avoid infinite loops!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-warning\">\n",
     "Here's an example of an infinite loop.<br>\n",
     "<b>Do not run this!!!!</b>\n",
@@ -102,8 +141,13 @@
     "    print('Doing something')\n",
     "    x += 1\n",
     "```\n",
-    "</div>\n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are 3 \"loop types\":\n",
     "1. [while loop](http://www.tutorialspoint.com/python3/python_while_loop.htm)\n",
     "2. [for loop](http://www.tutorialspoint.com/python3/python_for_loop.htm)\n",
@@ -123,10 +167,20 @@
     "There are 3 loop control statements available to you:\n",
     "1. [break](http://www.tutorialspoint.com/python3/python_break_statement.htm) statement\n",
     "2. [continue](http://www.tutorialspoint.com/python3/python_continue_statement.htm) statement\n",
-    "3. [pass](http://www.tutorialspoint.com/python3/python_pass_statement.htm) statement\n",
-    "\n",
-    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-decisions-loopcontrol.png?raw=true'></img>\n",
-    "\n",
+    "3. [pass](http://www.tutorialspoint.com/python3/python_pass_statement.htm) statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='https://github.com/ProsperousHeart/TrainingUsingJupyter/blob/master/IMGs/basics-decisions-loopcontrol.png?raw=true'></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-info\">\n",
     "<b>For example ...</b>\n",
     "\n",
@@ -138,9 +192,10 @@
     "    count += 1\n",
     "    if count >= 5:\n",
     "        break\n",
-    "\n",
     "print()        \n",
+    "```\n",
     "\n",
+    "```python\n",
     "# print only odd numbers\n",
     "for x in range(10):\n",
     "    # check if x is even\n",
@@ -156,7 +211,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# prints numbers 0-4\n",
+    "count = 0\n",
+    "while True:\n",
+    "    print(count)\n",
+    "    count += 1\n",
+    "    if count >= 5:\n",
+    "        break\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print only odd numbers\n",
+    "for x in range(10):\n",
+    "    # check if x is even\n",
+    "    if not(x % 2):\n",
+    "        continue\n",
+    "    print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,7 +249,7 @@
     "However - if **break** was executed inside the loop? Then it's skipped.\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>For example ...</b>\n",
+    "<b>Try this!</b>\n",
     "\n",
     "```python\n",
     "# prints 0-4 and then \"count reached value of 5\"\n",
@@ -181,9 +259,35 @@
     "    count += 1\n",
     "else:\n",
     "    print(\"Count value reached %d\" % count)\n",
-    "\n",
     "print()\n",
-    "\n",
+    "```\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prints 0-4 and then \"count reached value of 5\"\n",
+    "count = 0\n",
+    "while count<5:\n",
+    "    print(count)\n",
+    "    count += 1\n",
+    "else:\n",
+    "    print(\"Count value reached %d\" % count)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "<b>Try this!</b>\n",
+    "    \n",
+    "```python\n",
     "# prints 1-4\n",
     "for x in range(1, 10):\n",
     "    if x % 5 == 0:\n",
@@ -200,7 +304,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# prints 1-4\n",
+    "for x in range(1, 10):\n",
+    "    if x % 5 == 0:\n",
+    "        break\n",
+    "    print(x)\n",
+    "else:\n",
+    "    print('Not printed - loop is terminated because of break not fail condition')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "Can you see the difference?\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
@@ -219,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
